# bspline-policy

./: .gitignore  LICENSE  README.md
bspline_policy/: .gitignore  README.md  setup.py  train.py
bspline_policy/bspline_policy/: __init__.py
bspline_policy/bspline_policy/common/: __init__.py  bspline_action.py  knots.py
bspline_policy/bspline_policy/config/: clean_bspline_policy_unet_bspline.yaml  train_diffusion_unet_real_hybrid_bspline_workspace.yaml  train_dp_transformer.yaml
bspline_policy/bspline_policy/dataset/: __init__.py  robomimic_replay_bspline_image_dataset.py
bspline_policy/bspline_policy/policy/: __init__.py  diffusion_transformer_bspline_image_policy.py  diffusion_unet_bspline_image_policy.py
bspline_policy/bspline_policy/scripts/: __init__.py  mujoco_bsp_replay.py  policy_local_bspline.py  policy_server_bspline.py  rollout_x5_bspline.py  yam_replay_episodes_bspline.py  (+1 more)
bspline_policy/docs/: clean_bspline_policy_rollout.md  clean_bspline_policy_training.md
bspline_policy/tests/: test_cuda_graph_ddim.py
diffusion_policy/: README.md  conda_environment.yaml  training_mujoco_dataset.md
inference/: README.md
real_env/: README.md  pyproject.toml  requirements.txt  uv.toml
real_env/yam_teleop/: cameras.py  constants.py  convert_to_robomimic_hdf5.py  episode_storage.py  main.py  mock_env.py  policies.py  policy_local_utils.py  policy_server.py  real_env.py  replay_episodes.py  replay_episodes_bspline.py  reviewer.py  rollout_local_policy.py  sort_demos_from_review.py  yam_jparse.py  yam_server.py
real_env/yam_teleop/templates/: index.html
(+10 files in other folders)
