[project]
name = "smo"
version = "0.1.0"
requires-python = "==3.10.*"
dependencies = [
  "numpy==1.26.4",
  "torch==1.12.1",
  "torchvision==0.13.1",
  "opencv-python==4.7.0.72",
  "cffi==1.15.1",
  "ipykernel==6.16.*",
  "zarr==2.12.0",
  "numcodecs==0.10.2",
  "hydra-core==1.2.0",
  "einops==0.4.1",
  "dill==0.3.5.1",
  "scikit-video==1.1.11",
  "scikit-image==0.19.3",
  "shapely==1.8.4",
  "cython==0.29.32",
  "imageio==2.22.0",
  "termcolor==2.0.1",
  "psutil==5.9.2",
  "click>=8.1.3,<8.2.0",
  "boto3==1.24.96",
  "accelerate==0.13.2",
  "datasets==2.6.1",
  "diffusers==0.11.1",
  "cmake==3.24.3",
  "ray[default,tune]==2.2.0",
  "imagecodecs==2022.9.26",
  "huggingface_hub==0.25.1",
  "threadpoolctl==3.6.0",
  "scipy>=1.15",
  "h5py==3.11.0",
  "tqdm==4.66.2",
  "notebook==7.1.1",
  "matplotlib==3.8.4",
  "robomimic==0.2.0",
  "mujoco==3.2.4",
  "pin==2.7.0",
  "ruckig==0.15.3",
  "flask==3.0.2",
  "flask-socketio==5.3.6",
  "pyzmq==25.1.2",
  "redis==5.0.6",
  "phoenix6",
  "pygame==2.6.1",
  "wandb==0.25.1",
  "jax>=0.4.25",
  "hex_device==1.3.19",
  "depthai==3.5.0",
  "pyroki",
  "i2rt",
  "python-can==4.6.1",
  "dm-env==1.6",
  "dm-tree==0.1.10",
  "imageio-ffmpeg==0.6.0",
  "gdown==5.2.1",
]

[tool.uv]
package = false

[tool.uv.sources]
pyroki = { path = "pyroki", editable = true }
i2rt = { path = "i2rt", editable = true }
